--- a/src/form/bookEntryForm.form
+++ b/src/form/bookEntryForm.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="bookEntryForm">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="form.bookEntryForm">
   <grid id="27dc6" binding="bookEntryPanel" layout-manager="GridLayoutManager" row-count="10" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
