--- a/src/form/mainMenu.form
+++ b/src/form/mainMenu.form
@@ -61,13 +61,13 @@
           <text value="All Available Books"/>
         </properties>
       </component>
-      <component id="7a118" class="javax.swing.JButton" binding="findBookInformationButton" default-binding="true">
+      <component id="7a118" class="javax.swing.JButton" binding="findReaderInformationButton" default-binding="true">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <hideActionText value="false"/>
-          <text value="Find Book Information"/>
+          <text value="Find Reader Information"/>
         </properties>
       </component>
     </children>
